/*
  Software Update

  This API Section holds messages used for installing software somewhere in the vehicle and tracking that process.  For reporting detailed results or logs a Logs Upload Event can be used, which is defined in the API section Device Management. To indicate that the log upload event belongs to the context of an Software update, the value of context in the Logs Upload Event should be set to softwareupdate by convention.

  The version of the OpenAPI document: 2

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package com.bosch.bfb.protobuf.softwareupdate.v2;


enum Status {
  UNKNOWN = 0;
  DOWNLOADING = 1;
  DOWNLOAD_FAILURE = 2;
  DOWNLOAD_SUCCESS = 3;
  WAITING_FOR_UPDATE_CONDITION = 4;
  TIMEOUT = 5;
  UPDATE_REJECTED = 6;
  UPDATING = 7;
  UPDATE_FAILURE = 8;
  UPDATE_SUCCESS = 9;
  WAITING_FOR_MANAGER_APPROVAL = 10;
  UPDATE_SCHEDULED = 11;
  UPDATE_REVOKED = 12;
}
